--- a/normalizer_bench.html
+++ b/normalizer_bench.html
@@ -59,7 +59,7 @@ SPDX-License-Identifier: Unicode-3.0
 
 
 
-The following applies to parts of this file other that the test language content:
+The following applies to parts of this file other than the test language content:
 
 Any copyright is dedicated to the Public Domain.
 http://creativecommons.org/publicdomain/zero/1.0/
@@ -89,9 +89,6 @@ http://creativecommons.org/publicdomain/zero/1.0/
 </table>
 <script>
 
-// Have all the data in literals instead of deriving it at run-time to
-// avoid
-
 // Inclusion is as follows:
 //
 // English represents ASCII
@@ -107,7 +104,7 @@ http://creativecommons.org/publicdomain/zero/1.0/
 //
 // Bengali: Combining starters
 //
-// Chinese: Normalization-invariant above in the fast trie range.
+// Chinese: Normalization-invariant in the fast trie range.
 //
 // Japanese: Varies under normalization in the fast trie range.
 //
