--- a/normalizer_bench.html
+++ b/normalizer_bench.html
@@ -85,7 +85,7 @@ http://creativecommons.org/publicdomain/zero/1.0/
 
 <table>
 <thead><tr><th>Input</th><th>NFC</th><th>NFKC</th><th>NFD</th><th>NFKD</th></tr></thead>
-<tbody><tr><td colspan="p">Bench not run.</td></tr></tbody>
+<tbody><tr><td colspan="5">Bench not run.</td></tr></tbody>
 </table>
 <script>
 
